Login del sitio público funcionando 100%

--- a/system_huellitas/views/public/index.html
+++ b/system_huellitas/views/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Huellitas pets - Home</title>
     <!-- Agregamos una imagen para que se vea en la ventana -->
-    <link type="image/png" rel="icon" href="../../resources/img/huellita_logo_without_text.png">
+    <link type="image/png" rel="icon" href="../../resources/img/png/huellita_logo_without_text.png">
     <!-- Agregamos el framework de boostrap - css -->
     <link type="text/css" rel="stylesheet" href="../../resources/scss/main.css">
     <!-- Agregamos su archivo css -->
@@ -29,7 +29,7 @@
                     <h1 class="text-end text-yellow-color fw-bold">HUELLITAS PET’S</h1>
                     <p class="text-end text-light">¡Descubre los mejores precios para <br> los consentidos de la casa!
                     </p>
-                    <img class="float-end mt-5 p-2" src="../../resources/img/png/huellitas_logo_without_text.png"
+                    <img class="float-end mt-5 p-2" src="../../resources/img/png/huellita_logo_without_text.png"
                         width="70px">
                 </div>
             </div>
@@ -188,7 +188,7 @@
                 <div class="col-sm-12 col-md-6 col-lg-3">
                     <div class="card rounded-4 shadow">
                         <div class="d-flex justify-content-center align-items-center">
-                            <img src="../../resources/img/png/product1.png" width="250px" height="290px" class="p-3"
+                            <img src="../../resources/img/png/product3.png" width="250px" height="290px" class="p-3"
                                 alt="...">
                         </div>
                         <div class="card-body">
@@ -225,7 +225,7 @@
                 <div class="col-sm-12 col-md-6 col-lg-3">
                     <div class="card rounded-4 shadow">
                         <div class="d-flex justify-content-center align-items-center">
-                            <img src="../../resources/img/png/product1.png" width="250px" height="290px" class="p-3"
+                            <img src="../../resources/img/png/product3.png" width="250px" height="290px" class="p-3"
                                 alt="...">
                         </div>
                         <div class="card-body">
@@ -262,7 +262,7 @@
                 <div class="col-sm-12 col-md-6 col-lg-3">
                     <div class="card rounded-4 shadow">
                         <div class="d-flex justify-content-center align-items-center">
-                            <img src="../../resources/img/png/product1.png" width="250px" height="290px" class="p-3"
+                            <img src="../../resources/img/png/product3.png" width="250px" height="290px" class="p-3"
                                 alt="...">
                         </div>
                         <div class="card-body">
@@ -306,8 +306,11 @@
 
     <!-- Agregamos el framework de boostrap - js -->
     <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="../../node_modules/sweetalert/dist/sweetalert.min.js"></script>
+    <script type="text/javascript" src="../../controllers/utils/components.js"></script>
     <!-- Agregamos la ruta para agregar el menu -->
     <script src="../../controllers/utils/public.js"></script>
+    <script type="text/javascript" src="../../controllers/public/index.js"></script>
 </body>
 
 </html>
