--- a/system_huellitas/views/public/registro.html
+++ b/system_huellitas/views/public/registro.html
@@ -58,8 +58,13 @@
                             </div>
                             <div class="mb-3">
                                 <label for="direccion_cliente" class="form-label fw-bold">Dirección</label>
-                                <input type="text" id="direccion_cliente" name="direccionCliente"
+                                <input type="text" id="telefono_cliente" name="telefonoCliente"
                                     class="form-control form-control-lg shadow  rounded-3 bg-white">
+                            </div>
+                            <div class="mb-3">
+                                <label for="contrasenia_cliente" class="form-label fw-bold">Confirmar contraseña</label>
+                                <input type="password" id="cpntrasenia_cliente" name="contraseniaCliente"
+                                       class="form-control form-control-lg shadow  rounded-3 bg-white">
                             </div>
                         </div>
                         <!-- Segunda col -->
@@ -73,6 +78,11 @@
                                 <label for="email_cliente" class="form-label fw-bold">Correo electrónico</label>
                                 <input type="email" id="email_cliente" name="emailCliente"
                                     class="form-control form-control-lg shadow  rounded-3 bg-white">
+                            </div>
+                            <div class="mb-3">
+                                <label for="direccion_cliente" class="form-label fw-bold">Teléfono</label>
+                                <input type="text" id="direccion_cliente" name="direccionCliente"
+                                       class="form-control form-control-lg shadow  rounded-3 bg-white">
                             </div>
                             <div class="mb-3">
                                 <label for="contrasenia_cliente" class="form-label fw-bold">Contraseña</label>
