--- a/system_huellitas/views/public/categorias.html
+++ b/system_huellitas/views/public/categorias.html
@@ -27,55 +27,8 @@
             <!-- Contenedor principal -->
             <div class="container-fluid bg-white p-5 mt-10 rounded-4">
                 <!-- Fila para organizar el contenido -->
-                <div class="row row-cols-1 row-cols-md-4 g-4 text-center">
-                    <!-- Columna para la primera opción de categoría -->
-                    <div class="col">
-                        <a href=".././public/productos_gatos_cuidados.html" class="text-decoration-none" >
-                            <div class="card border-0 h-100">
-                                <img src="../../resources/img/png/ye.png" class="card-img-top" alt="categoria1">
-                                <div class="card-body">
-                                    <h5 class="card-title">Cuidados</h5>
-                                    <p class="card-text">Productos para el cuidado de gatos.</p>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <!-- Columna para la segunda opción de categoría -->
-                    <div class="col">
-                        <a href=".././public/productos_gatos_entretenimiento.html" class="text-decoration-none" >
-                            <div class="card border-0 h-100">
-                                <img src="../../resources/img/png/ye.png" class="card-img-top" alt="categoria2">
-                                <div class="card-body">
-                                    <h5 class="card-title">Entretenimiento</h5>
-                                    <p class="card-text">Productos para el entretenimiento de gatos.</p>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <!-- Columna para la tercera opción de categoría -->
-                    <div class="col">
-                        <a href=".././public/productos_gatos_comida.html" class="text-decoration-none">
-                            <div class="card border-0 h-100">
-                                <img src="../../resources/img/png/ye.png" class="card-img-top" alt="categoria3">
-                                <div class="card-body">
-                                    <h5 class="card-title">Comida</h5>
-                                    <p class="card-text">Productos alimenticios para gatos.</p>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <!-- Columna para la cuarta opción de categoría -->
-                    <div class="col">
-                        <a href=".././public/productos_gatos_juguetes.html" class="text-decoration-none" >
-                            <div class="card border-0 h-100">
-                                <img src="../../resources/img/png/ye.png" class="card-img-top" alt="categoria4">
-                                <div class="card-body">
-                                    <h5 class="card-title">Juguetes</h5>
-                                    <p class="card-text">Diversión y entretenimiento para gatos.</p>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
+                <div class="row row-cols-1 row-cols-md-4 g-4 text-center" id="contenedorPadre">
+                    <!-- Aquí iran las categorías de los productoss -->
                 </div>
             </div>
         </main>
