--- a/system_huellitas/views/public/perfil.html
+++ b/system_huellitas/views/public/perfil.html
@@ -28,7 +28,7 @@
             <br>
             <!-- Título de la página -->
             <h5 class="p-5">
-                <img id="imagen" src="../../resources/img/png/rectangulo_naranja.png">Perfil
+                <img src="../../resources/img/png/rectangulo_naranja.png">Perfil
             </h5>
             <!-- Contenedor principal -->
             <div class="container shadow p-4 mt-4 rounded-4 color_conteiner_central">
@@ -36,7 +36,7 @@
                     <!-- Columna izquierda: Imagen de perfil -->
                     <div class="col-lg-4 col-md-6 col-sm-7 p-5">
                         <form action="perfil_editar_imagen" id="perfil_cliente_vista">
-                            <img src="../../resources/img/png/foto_perfil_publico.png" class="img-fluid">
+                            <img id="imagen" src="../../resources/img/png/foto_perfil_publico.png" class="img-fluid">
                             <br>
                             <br>
                         </form>
@@ -71,7 +71,7 @@
                     </div>
                 </div>
                 <h5><b>Empezo</b></h5>
-                <p class="text-grey" id="fechaInicioCliente">10 de enero, 2024</p>
+                <p class="text-grey" id="fechaInicioCliente"></p>
             </div>
         </div>
     </main>
