--- a/system_huellitas/views/public/productos_categoria.html
+++ b/system_huellitas/views/public/productos_categoria.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Huellitas pets - productos gatos comida</title>
+    <title id="titulazo">Huellitas pets - productos gatos comida</title>
     <!-- Agregamos una imagen para que se vea en la ventana -->
     <link type="image/png" rel="icon" href="../../resources/img/huellita_logo_without_text.png">
     <!-- Agregamos el framework de boostrap - css -->
